myK8S/prometheus-loki-grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:${GRAFANA_IMAGE_TAG}
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-dashboard-homelab
              mountPath: /etc/grafana/dashboards/homelab
            - name: grafana-dashboard-opnsense
              mountPath: /etc/grafana/dashboards/opnsense
            - name: grafana-alerting
              mountPath: /etc/grafana/provisioning/alerting
            - name: grafana-dashboard-sitespeed
              mountPath: /etc/grafana/dashboards/sitespeed
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data-pvc
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: grafana-dashboard-homelab
          configMap:
            name: grafana-dashboard-homelab
        - name: grafana-dashboard-opnsense
          configMap:
            name: grafana-dashboard-opnsense
        - name: grafana-alerting
          configMap:
            name: grafana-alerting
        - name: grafana-dashboard-sitespeed
          configMap:
            name: grafana-dashboard-sitespeed
