myK8S/prometheus-loki-grafana/promtail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:latest
          resources:
            requests:
              cpu: 25m
              memory: 96Mi
            limits:
              memory: 256Mi
          args:
            - "-config.file=/etc/promtail/promtail.yaml"
          ports:
            - containerPort: 514
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: opnsense-logs
              mountPath: /var/log/opnsense
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: opnsense-logs
          persistentVolumeClaim:
            claimName: syslog-ng-logs-pvc
