myK8S/prometheus-loki-grafana/grafana-image-renderer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-image-renderer
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-image-renderer
  template:
    metadata:
      labels:
        app: grafana-image-renderer
    spec:
      containers:
        - name: grafana-image-renderer
          image: grafana/grafana-image-renderer:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  namespace: infra
spec:
  selector:
    app: grafana-image-renderer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
