myK8S/prometheus-loki-grafana/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: infra
spec:
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
