myK8S/prometheus-loki-grafana/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: infra
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
