myK8S/prometheus-loki-grafana/promtail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promtail
  namespace: infra
spec:
  selector:
    app: promtail
  ports:
    - name: http
      port: 9080
      targetPort: 9080
      protocol: TCP
