myK8S/prometheus-loki-grafana/syslog-ng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syslog-ng
  namespace: infra
spec:
  type: LoadBalancer
  ports:
    - name: syslog
      port: 1514
      targetPort: 1514
      protocol: UDP
  selector:
    app: syslog-ng
